/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/core/ledger/kvledger/txmgmt/statedb/privacyenabledstate";

package privacyenabledstate;

message SnapshotRecord {
    bytes key = 1;    
    bytes value = 2;
    bytes metadata = 3;
    bytes version = 4;
}
